--- a/Hijack/Assembly-CSharp.csproj
+++ b/Hijack/Assembly-CSharp.csproj
@@ -47,7 +47,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Wade\_Scripts\Player.cs" />
+     <Compile Include="Assets\_Scripts\Humv.cs" />
+     <Compile Include="Assets\_Scripts\Plane.cs" />
      <Compile Include="Assets\_Scripts\TankMovement.cs" />
+     <Compile Include="Assets\_Scripts\Vehicle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
