Added functionality for having 2 characters to be played concurrently while not in vehicles. Player 0 uses WASD and E while Player 1 uses arrows keys and right-ctrl.

--- a/Hijack/Assembly-CSharp-vs.csproj
+++ b/Hijack/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Wade\_Scripts\ProtoPlayer.cs" />
      <Compile Include="Assets\_Scripts\Bomb.cs" />
      <Compile Include="Assets\_Scripts\CannonBall.cs" />
      <Compile Include="Assets\_Scripts\DontDestroy.cs" />
